[package]
name = "user"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glean = { path = "../glean" }

[build-dependencies]
glean = { path = "../glean" }
