[package]
name = "user"
version = "0.1.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glean = { path = "../glean" }

[build-dependencies]
# Need a dependency to glean for the build script
# We might be able to split that out of the main Glean crate to reduce compile times
# when build target != host target
glean = { path = "../glean" }
